--- a/Lab8_ZPO/Lab8_ZPO/Lab8_ZPO.csproj
+++ b/Lab8_ZPO/Lab8_ZPO/Lab8_ZPO.csproj
@@ -8,4 +8,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="resources\calculator_icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="resources\calculator_icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
