added 2 new windows responsible for calculating Pi including fully funcional ui and code (needs more adjustments), updated some ui elements in all .xaml files

--- a/Lab8_ZPO/Lab8_ZPO/Lab8_ZPO.csproj
+++ b/Lab8_ZPO/Lab8_ZPO/Lab8_ZPO.csproj
@@ -10,10 +10,18 @@
 
   <ItemGroup>
     <None Remove="resources\calculator_icon.png" />
+    <None Remove="resources\pi_icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="PeterO.Numbers" Version="1.8.2" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="resources\calculator_icon.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="resources\pi_icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
