--- a/.gitignore
+++ b/.gitignore
@@ -606,3 +606,12 @@ $RECYCLE.BIN/
 /Lab8_ZPO/Lab8_ZPO/bin/Debug/net8.0-windows/Lab8_ZPO.dll
 /Lab8_ZPO/Lab8_ZPO/bin/Debug/net8.0-windows/Lab8_ZPO.exe
 /Lab8_ZPO/Lab8_ZPO/bin/Debug/net8.0-windows/Lab8_ZPO.pdb
+/Lab8_ZPO/Lab8_ZPO/obj/Debug/net8.0-windows/Lab8_ZPO_MarkupCompile.i.cache
+/Lab8_ZPO/Lab8_ZPO/obj/Debug/net8.0-windows/Lab8_ZPO.pdb
+/Lab8_ZPO/Lab8_ZPO/obj/Debug/net8.0-windows/Lab8_ZPO.g.resources
+/Lab8_ZPO/Lab8_ZPO/obj/Debug/net8.0-windows/Lab8_ZPO.dll
+/Lab8_ZPO/Lab8_ZPO/obj/Debug/net8.0-windows/Lab8_ZPO.AssemblyInfoInputs.cache
+/Lab8_ZPO/Lab8_ZPO/obj/Debug/net8.0-windows/Lab8_ZPO.AssemblyInfo.cs
+/Lab8_ZPO/Lab8_ZPO/obj/Debug/net8.0-windows/apphost.exe
+/Lab8_ZPO/Lab8_ZPO/obj/Debug/net8.0-windows/ref/Lab8_ZPO.dll
+/Lab8_ZPO/Lab8_ZPO/obj/Debug/net8.0-windows/refint/Lab8_ZPO.dll
